# mbedtls-SGX

./: CMakeLists.txt  README.md  include
cmake/: mbedtls_SGXConfig.cmake.in  setup_installation.cmake
example/: CMakeLists.txt
example/enclave/: CMakeLists.txt  Enclave.edl  ecalls.cpp  ssl_client1.c  ssl_client1.h  trusted_cacert.h
example/enclave/case_1/: c1_ssl_client.c  c1_ssl_client.h
example/enclave/case_2/: c2_ssl_client.c  c2_ssl_client.h  c2_ssl_server.c  c2_ssl_server.h
example/enclave/certs/: README.md  cacert.h  pem_to_headers.py  trusted_cacert.h
example/enclave/ssl_server/: ssl_client_2.c  ssl_client_2.h  ssl_server_2.c  ssl_server_2.h
example/untrusted/: CMakeLists.txt  c1_client_host.cpp  c2_client_host.cpp  c2_server_host.cpp  host.cpp  https_client_2_host.cpp  https_server_2_host.cpp
ocall/: CMakeLists.txt  net_ocalls.c  std_ocalls.c  time_ocalls.c
test/: stress_test_mt.sh  stress_test_st.sh
trusted/: CMakeLists.txt  glue.c  mbedtls_SGX.edl  mbedtls_SGX.install.edl  net_sockets_proxy.c  sgx_time_imp.c
trusted/mbedtls-3.6.3/include/: CMakeLists.txt  glue.h  sgx_time_imp.h
trusted/mbedtls-3.6.3/include/mbedtls/: mbedtls_config.h  net_sockets.h
